Added Footer Semantic HTML Tags & Defined Structure

--- a/index.html
+++ b/index.html
@@ -52,8 +52,24 @@
     <main>
 
     </main>
-    <footer>
-        
+    <footer class="main-footer">
+        <div class="row row-heading">
+            <div class="heading">
+               Footer Heading
+            </div>
+        </div>
+        <div class="row row-link-cloud">
+            Inline links
+        </div>
+        <div class="row row-footer">
+            <div class="content-image lefted">image</div>
+            <div class="centered">Some text
+                <div class="quick-links">
+                    Quick links
+                </div>
+            </div>
+            <div class="content-image righted">image</div>
+        </div>
     </footer>
 </body>
 </html>
