created two sections in the main section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Smashing Magazine</title>
 </head>
 <body>
+
     <header>
 <div class="header-image1">
     <p> SMASHING</p> 
@@ -50,7 +51,8 @@
 </div>
     </header>
     <main>
-
+  <section class="featured-posts"></section>
+  <section class="latest-posts"></section>
     </main>
     <footer class="main-footer">
         <div class="row row-heading">
