added mid-section divs and centered the heading

--- a/index.html
+++ b/index.html
@@ -53,7 +53,18 @@
         </div>
     </header>
     <main>
-        <section class="featured-posts"></section>
+        <section class="featured-posts">
+            <div class="main-posts1">1</div>
+            <div class="main-posts2">2</div>
+            <div class="main-posts3"></div>
+            <div class="main-posts4">4</div>
+            <div class="center-div">
+                <div class="div1">DON'T MISS THESE LATEST</div>
+                <div class="div2">ARTICLES</div>
+            </div>
+
+
+        </section>
         <section class="latest-posts"></section>
     </main>
     <footer class="main-footer">
