added write-ups to the main section

--- a/index.html
+++ b/index.html
@@ -54,10 +54,54 @@
     </header>
     <main>
         <section class="featured-posts">
-            <div class="main-posts1">1</div>
-            <div class="main-posts2">2</div>
-            <div class="main-posts3"></div>
-            <div class="main-posts4">4</div>
+            <div class="main-posts1">
+                <div class="image"></div>
+                <div class="write-up">
+                    <p>HOW TO ENSURE YOUR IMAGE  IS UP TO DATE WITH THE LATEST TRENDS IN TECH
+                 AND MAJOR LEAGUES ROUND THE WORLD
+                    </p>
+                </div>
+                <div class="divine">
+                    <div class="strategy">DIVINE STRATEGY</div>
+                    <div class="let">LET US GO</div>
+                </div>
+            </div>
+            <div class="main-posts2">
+                    <div class="image"></div>
+                    <div class="write-up">
+                        <p>HOW TO ENSURE YOUR IMAGE  IS UP TO DATE WITH THE LATEST TRENDS IN TECH
+                     AND MAJOR LEAGUES ROUND THE WORLD
+                        </p>
+                    </div>
+                    <div class="divine">
+                        <div class="strategy">DIVINE STRATEGY</div>
+                        <div class="let">LET US GO</div>
+                    </div>
+            </div>
+            <div class="main-posts3">
+                    <div class="image"></div>
+                    <div class="write-up">
+                        <p>HOW TO ENSURE YOUR IMAGE  IS UP TO DATE WITH THE LATEST TRENDS IN TECH
+                     AND MAJOR LEAGUES ROUND THE WORLD
+                        </p>
+                    </div>
+                    <div class="divine">
+                        <div class="strategy">DIVINE STRATEGY</div>
+                        <div class="let">LET US GO</div>
+                    </div>
+            </div>
+            <div class="main-posts4">
+                    <div class="image"></div>
+                    <div class="write-up">
+                        <p>HOW TO ENSURE YOUR IMAGE  IS UP TO DATE WITH THE LATEST TRENDS IN TECH
+                     AND MAJOR LEAGUES ROUND THE WORLD
+                        </p>
+                    </div>
+                    <div class="divine">
+                        <div class="strategy">DIVINE STRATEGY</div>
+                        <div class="let">LET US GO</div>
+                    </div>
+            </div>
             <div class="center-div">
                 <div class="div1">DON'T MISS THESE LATEST</div>
                 <div class="div2">ARTICLES</div>
