edited font-sizes and positions using grid

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro&display=swap" rel="stylesheet">
     <title>Smashing Magazine</title>
 </head>
 
@@ -18,38 +19,50 @@
 
     <header>
         <div class="header-image1">
-            <p> SMASHING</p>
-            <p>MAGAZINE</p>
+            #logo
         </div>
         <nav>
-
-            <div class="nav-item">
-                <a href="#"> Article</a>
-            </div>
-
-
-            <div class="nav-item">
-                <a href="#"> Books </a>
-            </div>
+            <a>
+                <div class="nav-item">
+                    <h1> Articles</h1> <br>
+                    <h2>Design and Developement</h2>
+                </div>
+            </a>
 
 
-            <div class="nav-item">
-                <a href="#"> Events</a>
-            </div>
+            <a>
+                <div class="nav-item">
+                    <h1> Books</h1> <br>
+                    <h2>Physical & Digital Books</h2>
+                </div>
+            </a>
+
+            <a>
+                <div class="nav-item">
+                    <h1> Events</h1> <br>
+                    <h2>Conferences & Workshops</h2>
+                </div>
+            </a>
 
 
-            <div class="nav-item">
-                <a href="#"> Jobs</a>
-            </div>
+            <a>
+                <div class="nav-item">
+                    <h1> Jobs</h1> <br>
+                    <h2>Find work & Employees</h2>
+                </div>
+            </a>
 
 
-            <div class="nav-item">
-                <a href="#"> Membership</a>
-            </div>
+            <a>
+                <div class="nav-item">
+                    <h1> Membership</h1> <br>
+                    <h2>Webinars & Early-birds</h2>
+                </div>
+            </a>
 
         </nav>
-        <div class="header-image1">
-            <p> Topics</p>
+        <div class="header-image1 image2">
+            Topics
         </div>
     </header>
     <main>
@@ -57,8 +70,8 @@
             <div class="main-posts1">
                 <div class="image"></div>
                 <div class="write-up">
-                    <p>HOW TO ENSURE YOUR IMAGE  IS UP TO DATE WITH THE LATEST TRENDS IN TECH
-                 AND MAJOR LEAGUES ROUND THE WORLD
+                    <p>HOW TO ENSURE YOUR IMAGE IS UP TO DATE WITH THE LATEST TRENDS IN TECH
+                        AND MAJOR LEAGUES ROUND THE WORLD
                     </p>
                 </div>
                 <div class="divine">
@@ -67,40 +80,40 @@
                 </div>
             </div>
             <div class="main-posts2">
-                    <div class="image"></div>
-                    <div class="write-up">
-                        <p>HOW TO ENSURE YOUR IMAGE  IS UP TO DATE WITH THE LATEST TRENDS IN TECH
-                     AND MAJOR LEAGUES ROUND THE WORLD
-                        </p>
-                    </div>
-                    <div class="divine">
-                        <div class="strategy">DIVINE STRATEGY</div>
-                        <div class="let">LET US GO</div>
-                    </div>
+                <div class="image"></div>
+                <div class="write-up">
+                    <p>HOW TO ENSURE YOUR IMAGE IS UP TO DATE WITH THE LATEST TRENDS IN TECH
+                        AND MAJOR LEAGUES ROUND THE WORLD
+                    </p>
+                </div>
+                <div class="divine">
+                    <div class="strategy">DIVINE STRATEGY</div>
+                    <div class="let">LET US GO</div>
+                </div>
             </div>
             <div class="main-posts3">
-                    <div class="image"></div>
-                    <div class="write-up">
-                        <p>HOW TO ENSURE YOUR IMAGE  IS UP TO DATE WITH THE LATEST TRENDS IN TECH
-                     AND MAJOR LEAGUES ROUND THE WORLD
-                        </p>
-                    </div>
-                    <div class="divine">
-                        <div class="strategy">DIVINE STRATEGY</div>
-                        <div class="let">LET US GO</div>
-                    </div>
+                <div class="image"></div>
+                <div class="write-up">
+                    <p>HOW TO ENSURE YOUR IMAGE IS UP TO DATE WITH THE LATEST TRENDS IN TECH
+                        AND MAJOR LEAGUES ROUND THE WORLD
+                    </p>
+                </div>
+                <div class="divine">
+                    <div class="strategy">DIVINE STRATEGY</div>
+                    <div class="let">LET US GO</div>
+                </div>
             </div>
             <div class="main-posts4">
-                    <div class="image"></div>
-                    <div class="write-up">
-                        <p>HOW TO ENSURE YOUR IMAGE  IS UP TO DATE WITH THE LATEST TRENDS IN TECH
-                     AND MAJOR LEAGUES ROUND THE WORLD
-                        </p>
-                    </div>
-                    <div class="divine">
-                        <div class="strategy">DIVINE STRATEGY</div>
-                        <div class="let">LET US GO</div>
-                    </div>
+                <div class="image"></div>
+                <div class="write-up">
+                    <p>HOW TO ENSURE YOUR IMAGE IS UP TO DATE WITH THE LATEST TRENDS IN TECH
+                        AND MAJOR LEAGUES ROUND THE WORLD
+                    </p>
+                </div>
+                <div class="divine">
+                    <div class="strategy">DIVINE STRATEGY</div>
+                    <div class="let">LET US GO</div>
+                </div>
             </div>
             <div class="center-div">
                 <div class="div1">DON'T MISS THESE LATEST</div>
