changed font-colors and family

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans|Source+Serif+Pro&display=swap" rel="stylesheet">
     <title>Smashing Magazine</title>
 </head>
 
@@ -68,10 +68,15 @@
     <main>
         <section class="featured-posts">
             <div class="main-posts1">
-                <div class="image"></div>
+                    <div class="author">
+                            <div class="image"></div>
+                            <div class="author-name">
+                                Vashira Santiago wrote
+                            </div>
+                        </div>
                 <div class="write-up">
-                    <p>HOW TO ENSURE YOUR IMAGE IS UP TO DATE WITH THE LATEST TRENDS IN TECH
-                        AND MAJOR LEAGUES ROUND THE WORLD
+                    <p>How To Ensure Your Image Is Up To Date With The Latest Trends In Tech
+                        And Major Leagues Round The World
                     </p>
                 </div>
                 <div class="divine">
@@ -80,10 +85,15 @@
                 </div>
             </div>
             <div class="main-posts2">
+                <div class="author">
                 <div class="image"></div>
+                <div class="author-name">
+                    Vashira Santiago wrote
+                </div>
+            </div>
                 <div class="write-up">
-                    <p>HOW TO ENSURE YOUR IMAGE IS UP TO DATE WITH THE LATEST TRENDS IN TECH
-                        AND MAJOR LEAGUES ROUND THE WORLD
+                    <p>How To Ensure Your Image Is Up To Date With The Latest Trends In Tech
+                        And Major Leagues Round The World
                     </p>
                 </div>
                 <div class="divine">
@@ -92,10 +102,15 @@
                 </div>
             </div>
             <div class="main-posts3">
-                <div class="image"></div>
+                    <div class="author">
+                            <div class="image"></div>
+                            <div class="author-name">
+                                Vashira Santiago wrote
+                            </div>
+                        </div>
                 <div class="write-up">
-                    <p>HOW TO ENSURE YOUR IMAGE IS UP TO DATE WITH THE LATEST TRENDS IN TECH
-                        AND MAJOR LEAGUES ROUND THE WORLD
+                    <p>How To Ensure Your Image Is Up To Date With The Latest Trends In Tech
+                        And Major Leagues Round The World
                     </p>
                 </div>
                 <div class="divine">
@@ -104,10 +119,15 @@
                 </div>
             </div>
             <div class="main-posts4">
-                <div class="image"></div>
+                    <div class="author">
+                            <div class="image"></div>
+                            <div class="author-name">
+                                Vashira Santiago wrote
+                            </div>
+                        </div>
                 <div class="write-up">
-                    <p>HOW TO ENSURE YOUR IMAGE IS UP TO DATE WITH THE LATEST TRENDS IN TECH
-                        AND MAJOR LEAGUES ROUND THE WORLD
+                    <p>How To Ensure Your Image Is Up To Date With The Latest Trends In Tech
+                        And Major Leagues Round The World
                     </p>
                 </div>
                 <div class="divine">
