made write-ups links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             #logo
         </div>
         <nav>
-            <a>
+            <a href="#">
                 <div class="nav-item">
                     <h1> Articles</h1> <br>
                     <h2>Design and Developement</h2>
@@ -30,14 +30,14 @@
             </a>
 
 
-            <a>
+            <a href="#">
                 <div class="nav-item">
                     <h1> Books</h1> <br>
                     <h2>Physical & Digital Books</h2>
                 </div>
             </a>
 
-            <a>
+            <a href="#">
                 <div class="nav-item">
                     <h1> Events</h1> <br>
                     <h2>Conferences & Workshops</h2>
@@ -45,7 +45,7 @@
             </a>
 
 
-            <a>
+            <a href="#">
                 <div class="nav-item">
                     <h1> Jobs</h1> <br>
                     <h2>Find work & Employees</h2>
@@ -53,7 +53,7 @@
             </a>
 
 
-            <a>
+            <a href="#">
                 <div class="nav-item">
                     <h1> Membership</h1> <br>
                     <h2>Webinars & Early-birds</h2>
@@ -75,9 +75,9 @@
                             </div>
                         </div>
                 <div class="write-up">
-                    <p>How To Ensure Your Image Is Up To Date With The Latest Trends In Tech
+                    <a href="#">How To Ensure Your Image Is Up To Date With The Latest Trends In Tech
                         And Major Leagues Round The World
-                    </p>
+                    </a>
                 </div>
                 <div class="divine">
                     <div class="strategy">DIVINE STRATEGY</div>
@@ -92,9 +92,9 @@
                 </div>
             </div>
                 <div class="write-up">
-                    <p>How To Ensure Your Image Is Up To Date With The Latest Trends In Tech
+                    <a href="#">How To Ensure Your Image Is Up To Date With The Latest Trends In Tech
                         And Major Leagues Round The World
-                    </p>
+                    </a>
                 </div>
                 <div class="divine">
                     <div class="strategy">DIVINE STRATEGY</div>
@@ -109,9 +109,9 @@
                             </div>
                         </div>
                 <div class="write-up">
-                    <p>How To Ensure Your Image Is Up To Date With The Latest Trends In Tech
+                    <a href="#">How To Ensure Your Image Is Up To Date With The Latest Trends In Tech
                         And Major Leagues Round The World
-                    </p>
+                    </a>
                 </div>
                 <div class="divine">
                     <div class="strategy">DIVINE STRATEGY</div>
@@ -126,9 +126,9 @@
                             </div>
                         </div>
                 <div class="write-up">
-                    <p>How To Ensure Your Image Is Up To Date With The Latest Trends In Tech
+                    <a href="#">How To Ensure Your Image Is Up To Date With The Latest Trends In Tech
                         And Major Leagues Round The World
-                    </p>
+                    </a>
                 </div>
                 <div class="divine">
                     <div class="strategy">DIVINE STRATEGY</div>
@@ -136,8 +136,8 @@
                 </div>
             </div>
             <div class="center-div">
-                <div class="div1">DON'T MISS THESE LATEST</div>
-                <div class="div2">ARTICLES</div>
+                <div class="div1"><a href="#">DON'T MISS THESE LATEST</a></div>
+                <div class="div2"> <a href="#">ARTICLES</a></div>
             </div>
 
 
