Defined Structure for lower section of page

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
     <main>
         <div class="featured-posts">
             <div class="main-posts1">
-                    <div class="author">
-                            <div class="image"></div>
-                            <div class="author-name">
-                                Vashira Santiago wrote
-                            </div>
-                        </div>
+                <div class="author">
+                    <div class="image"></div>
+                    <div class="author-name">
+                        Vashira Santiago wrote
+                    </div>
+                </div>
                 <div class="write-up">
                     <a href="#">How To Ensure Your Image Is Up To Date With The Latest Trends In Tech
                         And Major Leagues Round The World
@@ -87,11 +87,11 @@
             </div>
             <div class="main-posts2">
                 <div class="author">
-                <div class="image"></div>
-                <div class="author-name">
-                    Vashira Santiago wrote
+                    <div class="image"></div>
+                    <div class="author-name">
+                        Vashira Santiago wrote
+                    </div>
                 </div>
-            </div>
                 <div class="write-up">
                     <a href="#">How To Ensure Your Image Is Up To Date With The Latest Trends In Tech
                         And Major Leagues Round The World
@@ -103,12 +103,12 @@
                 </div>
             </div>
             <div class="main-posts3">
-                    <div class="author">
-                            <div class="image"></div>
-                            <div class="author-name">
-                                Vashira Santiago wrote
-                            </div>
-                        </div>
+                <div class="author">
+                    <div class="image"></div>
+                    <div class="author-name">
+                        Vashira Santiago wrote
+                    </div>
+                </div>
                 <div class="write-up">
                     <a href="#">How To Ensure Your Image Is Up To Date With The Latest Trends In Tech
                         And Major Leagues Round The World
@@ -120,12 +120,12 @@
                 </div>
             </div>
             <div class="main-posts4">
-                    <div class="author">
-                            <div class="image"></div>
-                            <div class="author-name">
-                                Vashira Santiago wrote
-                            </div>
-                        </div>
+                <div class="author">
+                    <div class="image"></div>
+                    <div class="author-name">
+                        Vashira Santiago wrote
+                    </div>
+                </div>
                 <div class="write-up">
                     <a href="#">How To Ensure Your Image Is Up To Date With The Latest Trends In Tech
                         And Major Leagues Round The World
@@ -263,6 +263,12 @@
                 </div>
             </div>
         </section>
+        <div class="green-section"></div>
+        <div class="community-links"></div>
+        <div class="red-section"></div>
+        <div class="curated-posts"></div>
+        
+
     </main>
     <footer class="main-footer">
         <div class="row row-heading">
