added article on person-of-the week

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Molle:400i|Spinnaker&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans+Serif+Pro&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro&display=swap" rel="stylesheet">
     <!-- Styles -->
@@ -13,6 +14,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/green.css">
     <title>Smashing Magazine</title>
 </head>
 
@@ -263,8 +265,39 @@
                 </div>
             </div>
         </section>
-        <div class="green-section"></div>
-        <div class="community-links"></div>
+        <div class="green-section">
+            <div class="green">
+                <h5> COMING UP NEXT . JULY 24-26</h5><br><br><br>
+                <h4>Smashing Print #1: Ethics & Privacy</h4><br><br>
+                <p> Meet our new<b> printed magazine</b>,exploring topics that will </p>
+            <p> make us all think,and will remain useful as time passes by.</p>
+         <p>  Friendly, Practical and approachable.<b> Shipping now</b></p> 
+        
+         <div class="green-div">Download a free PDF review 
+            <i class="fa fa-arrow"></i>   </div>  
+            <div class="green-image"></div> 
+        </div>
+        </div>
+        <div class="community-links">
+<div class="person-of-the-week">
+    <div class="person-image1"></div>
+    <div class="image1-text">
+            PERSON OF THE WEEK <br><br>
+            Marcos Cáceres (@marcosc) is a Staff Engineer at Mozilla. He has been working on web standards for over a decade and currently 
+            co-chairs the W3C’s Web Platform Incubator Community Group (WICG) and the Web Applications Working Group. Having developed for the web since 1996, Marcos is passionate about empowering web developers to build next-generation experiences and keeping the web safe, 
+            free, and open for all. Thank you for helping the web advance, dear Marcos!
+    </div>
+    <div class="article-grid">
+        <div class="article-1"></div>
+        <div class="article-2"></div>
+        <div class="article-3"></div>
+        <div class="article-4"></div>
+        <div class="article-5"></div>
+        <div class="article-6"></div>
+    </div>    
+</div>
+
+        </div>
         <div class="red-section"></div>
         <div class="curated-posts"></div>
         
