linted and validated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Molle:400i|Spinnaker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Molle:400i&Spinnaker&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans+Serif+Pro&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro&display=swap" rel="stylesheet">
     <!-- Styles -->
@@ -524,10 +524,11 @@
                     </div>
                 </div>
             </div>
+            <div class="twitter"> CLICK FOR MORE NEWS</div>
         </section>
 
-        </div>
-
+    
+        
 
     </main>
     <footer class="main-footer">
@@ -570,6 +571,7 @@
                 <li class="footer-links">&middot; <a href="#">Some link</a></li>
             </ul>
         </div>
+
         <div class="row row-footer">
             <div class="content-image lefted"><img class="img-holder" src="http://via.placeholder.com/100x100/#dedede"
                     alt="image"></div>
